2009-06-04  Manuel Cerón  <ceronman@gmail.com>

	* PopupMenuTool.cs: Removed Deactivate, implemented in base

2009-05-25  Manuel Cerón  <ceronman@gmail.com>

	* icons: 
