@@ -1,3 +1,7 @@
+2009-06-04  Manuel Cerón  <ceronman@gmail.com>
+
+	* UndoManager.cs: Added StackChanged Event
+
 2009-06-03  Manuel Cerón  <ceronman@gmail.com>
 
 	* ICommand.cs:
